sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	
	do{
		var swapped = false
		for(k <- 0 to getNombreValeurs()-1){
			if(plusPetit(k+1,k)){
				echange(k,k+1)
				swapped = true
			}
		}
	
}while(swapped == true)
}
